--- a/src/app/concepts/input-concept/input-concept.component.html
+++ b/src/app/concepts/input-concept/input-concept.component.html
@@ -1,6 +1,6 @@
 <div class="concept-container">
   <header class="concept-header">
-    <a routerLink="/signals-demo" class="back-link">← Back to Demo</a>
+    <a routerLink="/" class="back-link">← Back to Home</a>
     <h1>input()</h1>
     <p class="concept-description">Component input signal for receiving data from parent components</p>
   </header>
