--- a/src/app/concepts/model-concept/model-concept.component.html
+++ b/src/app/concepts/model-concept/model-concept.component.html
@@ -1,6 +1,6 @@
 <div class="concept-container">
   <header class="concept-header">
-    <a routerLink="/signals-demo" class="back-link">← Back to Demo</a>
+    <a routerLink="/" class="back-link">← Back to Home</a>
     <h1>model()</h1>
     <p class="concept-description">Two-way binding signal for parent-child component communication</p>
   </header>
