--- a/src/app/concepts/computed-concept/computed-concept.component.html
+++ b/src/app/concepts/computed-concept/computed-concept.component.html
@@ -1,6 +1,6 @@
 <div class="concept-container">
   <header class="concept-header">
-    <a routerLink="/signals-demo" class="back-link">← Back to Demo</a>
+    <a routerLink="/" class="back-link">← Back to Home</a>
     <h1>computed()</h1>
     <p class="concept-description">Derived reactive values that automatically update when dependencies change</p>
   </header>
