--- a/src/app/concepts/signal-concept/signal-concept.component.html
+++ b/src/app/concepts/signal-concept/signal-concept.component.html
@@ -1,6 +1,6 @@
 <div class="concept-container">
   <header class="concept-header">
-    <a routerLink="/signals-demo" class="back-link">← Back to Demo</a>
+    <a routerLink="/" class="back-link">← Back to Home</a>
     <h1>signal()</h1>
     <p class="concept-description">Basic reactive state primitive for creating writable signals</p>
   </header>
